force-app/main/default/objects/CJFW_SingularAdjustment__c/CJFW_SingularAdjustment__c.object-meta.xml
<CustomObject>
    <description>[P2] 매출채권 - 단수조정</description>
    <label>단수조정</label>
    <nameField>
        <displayFormat>SA{YYYYMMDD}{0000}</displayFormat>
        <label>Singular Adjustment No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>