force-app/main/default/objects/CJFW_SingularAdjustment__c/fields/AdjustTax__c.field-meta.xml
<CustomField>
    <fullName>AdjustTax__c</fullName>
    <label>Adjust Tax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>