force-app/main/default/objects/CJFW_SingularAdjustment__c/fields/AdjustValueofSupply__c.field-meta.xml
<CustomField>
    <fullName>AdjustValueofSupply__c</fullName>
    <label>Adjust Value of Supply</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>