force-app/main/default/objects/CJFW_SingularAdjustment__c/fields/AlcoholicBeverages__c.field-meta.xml
<CustomField>
    <fullName>AlcoholicBeverages__c</fullName>
    <defaultValue>&quot;N&quot;</defaultValue>
    <label>Alcoholic Beverages</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>