force-app/main/default/objects/CJFW_SingularAdjustment__c/fields/BeforeTax__c.field-meta.xml
<CustomField>
    <fullName>BeforeTax__c</fullName>
    <label>Before Tax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>