force-app/main/default/objects/CJFW_SingularAdjustment__c/fields/BeforeValueofSupply__c.field-meta.xml
<CustomField>
    <fullName>BeforeValueofSupply__c</fullName>
    <label>Before Value of Supply</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>