force-app/main/default/objects/CJFW_SingularAdjustment__c/fields/FM_AdjustAmount__c.field-meta.xml
<CustomField>
    <fullName>FM_AdjustAmount__c</fullName>
    <formula>AdjustValueofSupply__c + AdjustTax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjust Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>