force-app/main/default/objects/CJFW_SingularAdjustment__c/fields/FM_BeforeAmount__c.field-meta.xml
<CustomField>
    <fullName>FM_BeforeAmount__c</fullName>
    <formula>BeforeValueofSupply__c +  BeforeTax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Before Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>