force-app/main/default/objects/CJFW_SingularAdjustment__c/fields/FM_DifferenceTax__c.field-meta.xml
<CustomField>
    <fullName>FM_DifferenceTax__c</fullName>
    <formula>BeforeTax__c - AdjustTax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Difference Tax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>