force-app/main/default/objects/CJFW_SingularAdjustment__c/fields/FM_DifferenceValueofSupply__c.field-meta.xml
<CustomField>
    <fullName>FM_DifferenceValueofSupply__c</fullName>
    <formula>BeforeValueofSupply__c - AdjustValueofSupply__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Difference Value of Supply</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>