force-app/main/default/objects/CJFW_SingularAdjustment__c/fields/FM_MA__c.field-meta.xml
<CustomField>
    <fullName>FM_MA__c</fullName>
    <formula>&quot;(&quot;+  SoldTo__r.Owner.EmployeeNo__c  + &quot;) &quot; +  HYPERLINK( SoldTo__r.Owner.UserId__c ,  SoldTo__r.Owner.LastName )</formula>
    <label>MA</label>
    <type>Text</type>
</CustomField>