force-app/main/default/objects/CJFW_SingularAdjustment__c/fields/FoodMaterial__c.field-meta.xml
<CustomField>
    <fullName>FoodMaterial__c</fullName>
    <defaultValue>&quot;All&quot;</defaultValue>
    <label>Food Material</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Food Material</fullName>
            </value>
            <value>
                <fullName>Not</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>