force-app/main/default/objects/CJFW_SingularAdjustment__c/fields/SlipDate__c.field-meta.xml
<CustomField>
    <fullName>SlipDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Slip Date</label>
    <type>Date</type>
</CustomField>