force-app/main/default/objects/CJFW_SingularAdjustment__c/fields/SoldTo__c.field-meta.xml
<CustomField>
    <fullName>SoldTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sold To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Singular Adjustment</relationshipLabel>
    <relationshipName>Singular_Adjustment</relationshipName>
    <type>Lookup</type>
</CustomField>