force-app/main/default/objects/CJFW_SingularAdjustment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FM_CodeSoldTo__c</columns>
    <columns>FM_CodeShipTo__c</columns>
    <columns>Tax__c</columns>
    <columns>FM_SalesPeriod__c</columns>
    <columns>FM_BeforeAmount__c</columns>
    <columns>FM_AdjustAmount__c</columns>
    <columns>ApprovalStatus__c</columns>
    <filterScope>Everything</filterScope>
    <label>모두</label>
</ListView>